# httpxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_debian_pkg.sh  doorbell.cxx  http++.hxx  leaf_cert.pem  leaf_key.pem  proto.hxx
debian/: changelog  control  copyright  debhelper-build-stamp  files  libhttpxx.install  libhttpxx.substvars  rules
debian/.debhelper/libhttpxx/: dbgsym-build-ids
debian/.debhelper/libhttpxx/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/libhttpxx/dbgsym-root/usr/share/doc/: libhttpxx-dbgsym
debian/libhttpxx-dev/DEBIAN/: control  md5sums
debian/libhttpxx/DEBIAN/: control  md5sums
debian/libhttpxx/usr/share/doc/libhttpxx/: README.Debian
httpxx/: CMakeLists.txt  http_request.cxx
